--- a/sitomem.html
+++ b/sitomem.html
@@ -809,7 +809,9 @@ font-style: normal;
 
       showImage(currentIndex);
   });
+
 </script>
+<p>ciao<p>
 
             </body>
             </html>
