inserito tutte polaroid

--- a/sitomem.html
+++ b/sitomem.html
@@ -26,7 +26,10 @@
     }
 
     .movie-image {
+      margin-top: 20px;
       display: none;
+      height: 250px;
+      width: 200px;
     }
 
     .movie-image.visible {
@@ -701,9 +704,20 @@
   <!-- INIZIO PARTE POLAROID-->
   <section id="content">
     <div class="image-container">
-      <img src="polaroid1.jpg" alt="Memento Imagen 1" class="movie-image">
-      <img src="polaroid2.jpeg" alt="Memento Imagen 2" class="movie-image">
-      <!-- Agrega más imágenes según sea necesario -->
+      <img src="p1v.jpg" alt="Memento Imagen 1" class="movie-image">
+      <img src="p2v.jpg" alt="Memento Imagen 2" class="movie-image">
+      <img src="p2+s.jpg" alt="Memento Imagen 1" class="movie-image">
+      <img src="p3v.jpg" alt="Memento Imagen 2" class="movie-image">
+      <img src="p4v.jpg" alt="Memento Imagen 1" class="movie-image">
+      <img src="p5v.jpg" alt="Memento Imagen 2" class="movie-image">
+      <img src="p6v.jpg" alt="Memento Imagen 1" class="movie-image">
+      <img src="p7v.jpg" alt="Memento Imagen 2" class="movie-image">
+      <img src="p7v.jpg" alt="Memento Imagen 1" class="movie-image">
+      <img src="p8v.jpg" alt="Memento Imagen 2" class="movie-image">
+      <img src="p8+s.jpg" alt="Memento Imagen 1" class="movie-image">
+      <img src="p9v.jpg" alt="Memento Imagen 2" class="movie-image">
+      <img src="p9+s.jpg" alt="Memento Imagen 1" class="movie-image">
+       <!-- Agrega más imágenes según sea necesario -->
 
       <div class="circle-container">
         <div class="circle"></div>
