--- a/sitomem.html
+++ b/sitomem.html
@@ -716,6 +716,16 @@
       <img src="p8+s.jpg" alt="Memento Imagen 1" class="movie-image">
       <img src="p9v.jpg" alt="Memento Imagen 2" class="movie-image">
       <img src="p9+s.jpg" alt="Memento Imagen 1" class="movie-image">
+<!-- INIZIO PARTE TATTOO-->
+      <img src="tattoo1.jpg" alt="Memento Imagen 2" class="movie-image">
+      <img src="tattoo2.jpg" alt="Memento Imagen 1" class="movie-image">
+      <img src="tattoo3.jpg" alt="Memento Imagen 2" class="movie-image">
+      <img src="tattoo4.jpg" alt="Memento Imagen 1" class="movie-image">
+      <img src="tattoo5.jpg" alt="Memento Imagen 2" class="movie-image">
+      <img src="tattoo6.jpg" alt="Memento Imagen 2" class="movie-image">
+      <img src="tattoo7.jpg" alt="Memento Imagen 1" class="movie-image">
+      <img src="tattoo8.jpg" alt="Memento Imagen 2" class="movie-image">
+      <img src="tattoo9.jpg" alt="Memento Imagen 1" class="movie-image">
        <!-- Agrega más imágenes según sea necesario -->
 
       <div class="circle-container">
