modifiche sequenza polaroid

--- a/sitomem.html
+++ b/sitomem.html
@@ -607,7 +607,7 @@
         <div class="section active" id="section0">
           <div class="img-container">
             <img
-              src="polaroidtattoo/p1v.jpg"
+              src="polaroidtattoo/tattoo2.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -616,7 +616,7 @@
         <div class="section" id="section1">
           <div class="img-container">
             <img
-              src="polaroidtattoo/p2v.jpg"
+              src="polaroidtattoo/tattoo6.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -625,7 +625,7 @@
         <div class="section" id="section2">
           <div class="img-container">
             <img
-              src="polaroidtattoo/p2+s.jpg"
+              src="polaroidtattoo/tattoo5.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -634,7 +634,7 @@
         <div class="section" id="section3">
           <div class="img-container">
             <img
-              src="polaroidtattoo/p4v.jpg"
+              src="polaroidtattoo/tattoo9.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -643,7 +643,7 @@
         <div class="section" id="section4">
           <div class="img-container">
             <img
-              src="polaroidtattoo/p5v.jpg"
+              src="polaroidtattoo/p7v.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -652,7 +652,7 @@
         <div class="section" id="section5">
           <div class="img-container">
             <img
-              src="polaroidtattoo/p5v.jpg"
+              src="polaroidtattoo/p6v.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -661,7 +661,7 @@
         <div class="section" id="section6">
           <div class="img-container">
             <img
-              src="polaroidtattoo/p5v.jpg"
+              src="polaroidtattoo/tattoo4.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -732,9 +732,41 @@
         </div>
       </div>
 
+      <!-- agg div per aggiungere pallino-->
       <div class="box-container">
         <div class="left-column">
           <div class="box left-box active"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
+          <div class="box left-box"></div>
           <div class="box left-box"></div>
           <div class="box left-box"></div>
           <div class="box left-box"></div>
@@ -753,6 +785,37 @@
           <div class="box right-box"></div>
           <div class="box right-box"></div>
           <div class="box right-box active"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
+          <div class="box right-box"></div>
           <div class="box right-box"></div>
           <div class="box right-box"></div>
           <div class="box right-box"></div>
