--- a/sitomem.html
+++ b/sitomem.html
@@ -642,11 +642,18 @@
         </div>
         <div class="section" id="section4">
           <div class="img-container">
+            <div id="cambioimmagine">
             <img
               src="polaroidtattoo/p7v.jpg"
               alt="Memento Imagen 1"
-              class="img"
+              class="img1"
             />
+            <img
+            src="polaroidtattoo/p9v.jpg"
+            alt="Memento Imagen 1"
+            class="img2"
+          />
+        </div>
           </div>
         </div>
         <div class="section" id="section5">
@@ -723,11 +730,18 @@
         </div>
         <div class="section" id="section13">
           <div class="img-container">
+            <div id="cambioimmagine">
             <img
-              src="polaroidtattoo/p7v.jpg"
+              src="polaroidtattoo/p8v.jpg"
               alt="Memento Imagen 1"
-              class="img"
+              class="img1"
             />
+            <img
+            src="polaroidtattoo/p9v.jpg"
+            alt="Memento Imagen 1"
+            class="img2"
+          />
+          </div>
           </div>
         </div>
       </div>
@@ -830,6 +844,8 @@
         </div>
       </div>
     </section>
+    <br><br><br><br><br><br><br>
+    
     <footer>
       <p>© 2023 Memento Website</p>
     </footer>
