--- a/sitomem.html
+++ b/sitomem.html
@@ -732,7 +732,7 @@
           <div class="img-container">
             <div id="cambioimmagine">
             <img
-              src="polaroidtattoo/p8v.jpg"
+              src="polaroidtattoo/p2vr.jpg"
               alt="Memento Imagen 1"
               class="img1"
             />
