--- a/sitomem.html
+++ b/sitomem.html
@@ -737,7 +737,7 @@
               class="img1"
             />
             <img
-            src="polaroidtattoo/p9v.jpg"
+            src="polaroidtattoo/rTedn1.jpg"
             alt="Memento Imagen 1"
             class="img2"
           />
