--- a/sitomem.html
+++ b/sitomem.html
@@ -24,7 +24,6 @@
       <br /><br /><br />
 
       <img id="titolo" src="titolo.png" />
-      <video src="figo.mp4" autoplay width="300px" loop></video>
 
       <section id="scrolly">
         <div class="sticky-thing">
@@ -406,7 +405,7 @@
             const offset = off.value * factor;
             const marginTop = -offset + step.height;
             const marginBottom = offset - h;
-            const rootMargin = `${marginTop}px 0px ${marginBottom}px 0px`;
+            const rootMargin = `${marginTop}px 0px ${marginBottom}px px`;
 
             const threshold = createProgressThreshold(
               step.height,
@@ -618,7 +617,7 @@
             <img
               src="polaroidtattoo/tattoo6.jpg"
               alt="Memento Imagen 1"
-              class="img"
+              class="imgt"
             />
           </div>
         </div>
