--- a/sitomem.html
+++ b/sitomem.html
@@ -843,8 +843,33 @@
         </div>
       </div>
     </section>
-    <br><br><br><br><br><br><br>
-    
+    <br><br><br><br><br>
+  
+        <br /><br /><br /><br />
+        <article>
+        <div class="step" data-step="6">
+          <p>
+            Il regista ci fa credere che ci dobbiamo fidare solo dei tatuaggi
+            e delle polaroid, dati come evidenze, perché il protagonista non
+            avendo memoria a lungo termine li utilizza come strumenti che gli
+            permettono di orientarsi ogni giorno.
+          </p>
+          <div class="step" data-step="7">
+            <p>
+              Il montaggio prevede che la storia alterni ogni 15 minuti una
+              scena cronologicamente opposta alla precedente. La pellicola
+              parte quindi dalla fine e si conclude poco dopo la metà,
+              alternando scene in bianco e nero e a colori.
+            </p>
+          </div>
+         
+          </article>
+
+          <br><br><br><br><br>
+  
+          <br /><br /><br /><br />
+
+
     <footer>
       <p>© 2023 Memento Website</p>
     </footer>
@@ -877,7 +902,6 @@
       // });
     </script>
 
-    <p>gxhg</p>
-    <p></p>
+ 
   </body>
 </html>
