--- a/sitomem.html
+++ b/sitomem.html
@@ -748,7 +748,26 @@
       <!-- agg div per aggiungere pallino-->
       <div class="box-container">
         <div class="left-column">
-          <div class="box left-box active"></div>
+          <div class="box2 left-box active"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
+          <div class="box2 left-box"></div>
           <div class="box left-box"></div>
           <div class="box left-box"></div>
           <div class="box left-box"></div>
@@ -773,71 +792,51 @@
           <div class="box left-box"></div>
           <div class="box left-box"></div>
           <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
-          <div class="box left-box"></div>
+
         </div>
         <div class="right-column">
           <div class="box right-box"></div>
-          <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box active"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
-          <div class="box right-box"></div>
+          <div class="box2 right-box"></div>
           <div class="box right-box"></div>
           <div class="box right-box"></div>
         </div>
