--- a/sitomem.html
+++ b/sitomem.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Scrollama: Sticky Overlay Example" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/etl6wzo.css">
   </head>
 
   <body>
@@ -81,16 +82,9 @@
               avendo memoria a lungo termine li utilizza come strumenti che gli
               permettono di orientarsi ogni giorno.
             </p>
+           
+            <br /><br /><br /><br /><br /><br /><br /><br />
             <div class="step" data-step="7">
-              <p>
-                Il montaggio prevede che la storia alterni ogni 15 minuti una
-                scena cronologicamente opposta alla precedente. La pellicola
-                parte quindi dalla fine e si conclude poco dopo la metà,
-                alternando scene in bianco e nero e a colori.
-              </p>
-            </div>
-            <br /><br /><br /><br />
-            <div class="step" data-step="8">
               <p>
                 Crediamo che le evidenze siano l’unico dato che ci faccia
                 comprendere l’oggettività dei fatti, ma quanto la soggettività
@@ -598,6 +592,11 @@
       }
       init();
     </script>
+
+
+<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /> <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+<img id="schema" src="schema.png" />
+
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
     <!-- INIZIO PARTE POLAROID-->
