--- a/sitomem.html
+++ b/sitomem.html
@@ -15,17 +15,25 @@
   <body>
     <script src="slides.js" defer></script>
     <script src="memento.js"></script>
-    <main>
-      <nav>
-        <a href="https://github.com/russellgoldenberg/scrollama"></a>
-      </nav>
+   
 
-      <br /><br /><br />
-      <br /><br /><br />
-      <br /><br /><br />
+ 
+    <ul id="menu">
+      <li><a href="#">INTRO</a></li>
+      <li><a href="#">GRAFICO</a></li>
+      <li><a href="#">EVIDENZE</a></li>
+      <li><a href="#">CONCLUSIONE</a></li>
+  </ul>
 
+
+<br /><br />
       <img id="titolo" src="titolo.png" />
 
+
+      <main>
+        <nav>
+          <a href="https://github.com/russellgoldenberg/scrollama"></a>
+        </nav>
       <section id="scrolly">
         <div class="sticky-thing">
           <svg class="orange-lines"></svg>
