--- a/sitomem.html
+++ b/sitomem.html
@@ -17,17 +17,23 @@
     <script src="memento.js"></script>
    
 
- 
+ <nav>
     <ul id="menu">
       <li><a href="#">INTRO</a></li>
       <li><a href="#">GRAFICO</a></li>
       <li><a href="#">EVIDENZE</a></li>
       <li><a href="#">CONCLUSIONE</a></li>
   </ul>
-
+</nav>
 
 <br /><br />
       <img id="titolo" src="titolo.png" />
+
+
+      <br /><br /> 
+      <br /><br />
+      <br /><br />
+      <br /><br />
 
 
       
@@ -61,6 +67,9 @@
         
       </script>
 
+<br /><br /> 
+<br /><br />
+<br /><br />
 <article>
   <div class="step" data-step="1">
     <p>
