ordine pallini scene
ordine pallini e una polaroid png

--- a/sitomem.html
+++ b/sitomem.html
@@ -27,7 +27,7 @@
 </nav>
 
 <br /><br />
-      <img id="titolo" src="titolo.png" />
+   <img id="titolo" src="titolo.png" />
 
 
       <br /><br /> 
@@ -642,7 +642,7 @@
         <div class="section active" id="section0">
           <div class="img-container">
             <img
-              src="polaroidtattoo/tattoo2.jpg"
+              src="polaroidtattoo/never.png"
               alt="Memento Imagen 1"
               class="img"
             />
