--- a/sitomem.html
+++ b/sitomem.html
@@ -74,65 +74,83 @@
 <br /><br />
 
 <article>
-  <div class="step" data-step="1">
+  <div class="step11" >
     <p>
-      Oggi considerato come uno dei film più importanti del nuovo
-      millennio, nel 2002 ricevette anche le candidature ai premi Oscar
-      per miglior sceneggiatura originale e miglior montaggio.
+      Oggi considerato come uno dei film <br>più importanti del nuovo
+      millennio, <br>nel 2002 ricevette anche le candidature <br>ai premi Oscar
+      per miglior sceneggiatura originale <br>e miglior montaggio.
     </p>
   </div>
+
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
   <br /><br /><br /><br />
-  <div class="step" data-step="2">
+  <div class="step2" >
     <p>
-      I protagonisti dei film di Nolan presentano sempre un rapporto
-      complesso con realtà e memoria, e il regista si diverte a
-      raccontarne le gesta giocando con il tempo, o per meglio dire,
+      I protagonisti dei film di Nolan <br>presentano sempre un rapporto
+      complesso <br>con realtà e memoria, e il regista si diverte a
+      raccontarne <br>le gesta giocando con il tempo, o per meglio dire,<br>
       utilizzando una struttura temporale non lineare.
     </p>
   </div>
+
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
   <br /><br /><br /><br />
-  <div class="step" data-step="3">
+  <div class="step12" >
     <p>
-      Leonard Shelby in Memento mette in discussione i suoi ricordi il
-      tempo continua a giocare un ruolo chiave nella storia.
+      Leonard Shelby in Memento <br> mette in discussione i suoi ricordi, <br> il
+      tempo continua a giocare <br> un ruolo chiave nella storia.
     </p>
   </div>
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
   <br /><br /><br /><br />
-  <div class="step" data-step="4">
+  <div class="step2" >
     <p>
-      Ti proponiamo una visualizzazione pensata proprio per coloro che
-      dopo aver visto il film sono rimasti con più domande che risposte.
-      Con questa visualizzazione proveremo a rispondere ad alcune
-      domande
-    </p>
-  </div>
-  <br /><br /><br /><br />
-  <div class="step" data-step="5">
-    <p>
-      Il montaggio prevede che la storia alterni ogni 15 minuti una
-      scena cronologicamente opposta alla precedente. La pellicola parte
-      quindi dalla fine e si conclude poco dopo la metà, alternando
+      Il montaggio prevede che la storia <br> alterni ogni 15 minuti una
+      scena <br> cronologicamente opposta alla precedente. <br>La pellicola parte
+      quindi dalla fine <br> e si conclude poco dopo la metà,<br> alternando
       scene in bianco e nero e a colori.
     </p>
   </div>
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
   <br /><br /><br /><br />
-  <div class="step" data-step="6">
+  <div class="step13" >
     <p>
-      Il regista ci fa credere che ci dobbiamo fidare solo dei tatuaggi
+      Il regista ci fa credere che ci dobbiamo fidare <br> solo dei tatuaggi
       e delle polaroid, dati come evidenze, perché il protagonista non
       avendo memoria a lungo termine li utilizza come strumenti che gli
-      permettono di orientarsi ogni giorno.
+      permettono <br>di orientarsi ogni <i>giorno.</i>
     </p>
-   
-    <br /><br /><br /><br /><br /><br /><br /><br />
-    <div class="step" data-step="7">
+  </div>
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+  <br /><br /><br /><br />
+  
+    <div class="stepc" >
       <p>
         Crediamo che le evidenze siano l’unico dato che ci faccia
         comprendere l’oggettività dei fatti, ma quanto la soggettività
         del protagonista influenza le sue azioni?
       </p>
     </div>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+  <br /><br /><br /><br />
+
+    <div class="stepc" >
+    <p>
+      Ti proponiamo una visualizzazione <br>pensata proprio per coloro <br>che
+      dopo aver visto il film sono rimasti <br> con più domande che risposte.<br><br>
+      Con questa visualizzazione proveremo a rispondere <br> ad alcune
+      domande
+    </p>
   </div>
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
+  <br /><br /><br /><br />
+
 </article>
 
 
