barra pallini in ordine

--- a/sitomem.html
+++ b/sitomem.html
@@ -650,7 +650,7 @@
         <div class="section active" id="section0">
           <div class="img-container">
             <img
-              src="polaroidtattoo/tattoo2.jpg"
+              src="polaroidtattoo/teddyaterra.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -659,7 +659,7 @@
         <div class="section" id="section1">
           <div class="img-container">
             <img
-              src="polaroidtattoo/tattoo6.jpg"
+              src="polaroidtattoo/p2v.jpg"
               alt="Memento Imagen 1"
               class="imgt"
             />
@@ -668,7 +668,7 @@
         <div class="section" id="section2">
           <div class="img-container">
             <img
-              src="polaroidtattoo/tattoo5.jpg"
+              src="polaroidtattoo/p2+s.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -677,7 +677,7 @@
         <div class="section" id="section3">
           <div class="img-container">
             <img
-              src="polaroidtattoo/tattoo9.jpg"
+              src="polaroidtattoo/p1v.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
