--- a/sitomem.html
+++ b/sitomem.html
@@ -26,6 +26,7 @@
   </ul>
 </nav>
 
+
 <br /><br />
       <img id="titolo" src="titolo.png" />
 
@@ -107,6 +108,48 @@
   <br /><br /><br /><br />
   <div class="step2" >
     <p>
+      Il regista ci fa credere che ci dobbiamo fidare <br> solo dei tatuaggi
+      e delle polaroid, dati come evidenze, perché il protagonista non
+      avendo memoria a lungo termine li utilizza come strumenti che gli
+      permettono <br>di orientarsi nella vita quotidiana.
+    </p>
+  </div>
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+  <div class="stepcg" >
+    <p>
+      Tatuaggi e polaroid sembrano essere l'unico dato che può suggerirci la verità del racconto
+    </p>
+    <!-- al centro grande il triplo-->
+  </div>
+  <br /><br /><br /><br /> <br />
+  <br /><br /><br /><br /> <br /><br /><br /><br /> <br /><br /><br /><br />
+  <div class="stepc" >
+    <p>
+      Ma possiamo ritenere questi dati davvero oggettivi?
+    </p>
+    <!-- al centro grande-->
+  </div>
+  <br /><br /><br /><br /> <br />
+  <br /><br /><br /><br /> <br /><br /><br /><br /> <br /><br /><br /><br />
+  <div class="stepc" >
+    <p>
+      Per capirlo, o almeno provarci, abbiamo provato a rileggere la storia da un punto di vista diverso...
+    </p>
+    <!-- al centro grande-->
+  </div>
+  <br /><br /><br /><br /> <br />
+  <br /><br /><br /><br /> <br /><br /><br /><br /> <br /><br /><br /><br />
+  <div class="stepc" >
+  <p>
+Ma partiamo dal montaggio di Nolan
+  </p>
+  <!-- al centro grande-->
+</div>
+<br /><br /><br /><br /> <br />
+<br /><br /><br /><br /> <br /><br /><br /><br /> <br /><br /><br /><br />
+
+  <div class="step13" >
+    <p>
       Il montaggio prevede che la storia <br> alterni ogni 15 minuti una
       scena <br> cronologicamente opposta alla precedente. <br>La pellicola parte
       quindi dalla fine <br> e si conclude poco dopo la metà,<br> alternando
@@ -114,43 +157,29 @@
     </p>
   </div>
   <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+</article>
 
-  <br /><br /><br /><br />
-  <div class="step13" >
-    <p>
-      Il regista ci fa credere che ci dobbiamo fidare <br> solo dei tatuaggi
-      e delle polaroid, dati come evidenze, perché il protagonista non
-      avendo memoria a lungo termine li utilizza come strumenti che gli
-      permettono <br>di orientarsi ogni <i>giorno.</i>
-    </p>
-  </div>
-  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+<a name="grafico"></a>
+<p></p><p></p><p></p><p></p><p></p>
+<img id="schema" src="schema.png" />
 
   <br /><br /><br /><br />
   
-    <div class="stepc" >
-      <p>
-        Crediamo che le evidenze siano l’unico dato che ci faccia
-        comprendere l’oggettività dei fatti, ma quanto la soggettività
-        del protagonista influenza le sue azioni?
-      </p>
-    </div>
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-
-  <br /><br /><br /><br />
-
+  <article>
     <div class="stepc" >
     <p>
-      Ti proponiamo una visualizzazione <br>pensata proprio per coloro <br>che
-      dopo aver visto il film sono rimasti <br> con più domande che risposte.<br><br>
-      Con questa visualizzazione proveremo a rispondere <br> ad alcune
-      domande
+      Adesso ti proponiamo un'analisi delle scene dal punto di vista cronologico e una rilettura delle evidenze: polaroid e tatuaggi,
+      che rappresentano l'unico punto di riferimento oggettivo per il protagonista.
     </p>
   </div>
   <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
   <br /><br /><br /><br />
-
+  <div class="stepc" >
+    <p>
+  Ci siamo chiesti: quanto la soggettività del protagonista interferisce con la presunta veridicità delle evidenze?
+    </p>
+  </div>
 </article>
 
 
@@ -651,9 +680,7 @@
 
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /> <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-<a name="grafico"></a>
-<p></p><p></p><p></p><p></p><p></p>
-<img id="schema" src="schema.png" />
+
 
 
 
@@ -677,9 +704,9 @@
         <div class="section" id="section1">
           <div class="img-container">
             <img
-              src="polaroidtattoo/p2v.jpg"
+              src="polaroidtattoo/p6v.jpg"
               alt="Memento Imagen 1"
-              class="imgt"
+              class="img"
             />
           </div>
         </div>
@@ -701,6 +728,7 @@
             />
           </div>
         </div>
+        <br /><br /><br /><br />
         <div class="section" id="section4">
           <div class="img-container">
             <div id="cambioimmagine">
