--- a/sitomem.html
+++ b/sitomem.html
@@ -79,7 +79,7 @@
     <p>
       Oggi considerato come uno dei film <br>più importanti del nuovo
       millennio, <br>nel 2002 ricevette anche le candidature <br>ai premi Oscar
-      per miglior sceneggiatura originale <br>e miglior montaggio.
+      per miglior sceneggiatura originale <br>e miglior <font color="orange"> montaggio.</font>
     </p>
   </div>
 
@@ -88,7 +88,7 @@
   <div class="step2" >
     <p>
       I protagonisti dei film di Nolan <br>presentano sempre un rapporto
-      complesso <br>con realtà e memoria, e il regista si diverte a
+      complesso <br>con <B>realtà</B> e memoria, e il regista si diverte a
       raccontarne <br>le gesta giocando con il tempo, o per meglio dire,<br>
       utilizzando una struttura temporale non lineare.
     </p>
@@ -109,21 +109,14 @@
   <div class="step2" >
     <p>
       Il regista ci fa credere che ci dobbiamo fidare <br> solo dei tatuaggi
-      e delle polaroid, dati come evidenze, perché il protagonista non
-      avendo memoria a lungo termine li utilizza come strumenti che gli
+      e delle polaroid, dati come evidenze, <br> perché il protagonista <br> non
+      avendo memoria a lungo termine <br> li utilizza come strumenti che gli
       permettono <br>di orientarsi nella vita quotidiana.
     </p>
   </div>
   <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+  <br /><br /><br /><br /><br />
   <div class="stepcg" >
-    <p>
-      Tatuaggi e polaroid sembrano essere l'unico dato che può suggerirci la verità del racconto
-    </p>
-    <!-- al centro grande il triplo-->
-  </div>
-  <br /><br /><br /><br /> <br />
-  <br /><br /><br /><br /> <br /><br /><br /><br /> <br /><br /><br /><br />
-  <div class="stepc" >
     <p>
       Ma possiamo ritenere questi dati davvero oggettivi?
     </p>
@@ -139,9 +132,9 @@
   </div>
   <br /><br /><br /><br /> <br />
   <br /><br /><br /><br /> <br /><br /><br /><br /> <br /><br /><br /><br />
-  <div class="stepc" >
+  <div class="stepcg" >
   <p>
-Ma partiamo dal montaggio di Nolan
+Partiamo dal montaggio di Nolan
   </p>
   <!-- al centro grande-->
 </div>
@@ -165,19 +158,19 @@ Ma partiamo dal montaggio di Nolan
 
   <br /><br /><br /><br />
   
-  <article>
-    <div class="stepc" >
+  <article>  
+  <div class="stepcg" >
     <p>
-      Adesso ti proponiamo un'analisi delle scene dal punto di vista cronologico e una rilettura delle evidenze: polaroid e tatuaggi,
-      che rappresentano l'unico punto di riferimento oggettivo per il protagonista.
+  Ci siamo chiesti: quanto la soggettività del protagonista interferisce con la presunta veridicità delle evidenze?
     </p>
   </div>
   <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
   <br /><br /><br /><br />
-  <div class="stepc" >
+  <div class="step11" >
     <p>
-  Ci siamo chiesti: quanto la soggettività del protagonista interferisce con la presunta veridicità delle evidenze?
+      Adesso ti proponiamo un'analisi delle scene <br> dal punto di vista cronologico <br> e una rilettura delle evidenze: polaroid e tatuaggi,<br>
+      che rappresentano l'unico punto di riferimento oggettivo <br> per il protagonista.
     </p>
   </div>
 </article>
