--- a/sitomem.html
+++ b/sitomem.html
@@ -78,8 +78,8 @@
   <div class="step11" >
     <p>
       Oggi considerato come uno dei film <br>più importanti del nuovo
-      millennio, <br>nel 2002 ricevette anche le candidature <br>ai premi Oscar
-      per miglior sceneggiatura originale <br>e miglior <font color="orange"> montaggio.</font>
+      millennio, <br>nel 2002 ricevette anche le candidature <br>ai premi <font color="d24f2c"><b>Oscar</b></font>
+      per miglior sceneggiatura originale <br>e miglior montaggio.
     </p>
   </div>
 
@@ -88,7 +88,7 @@
   <div class="step2" >
     <p>
       I protagonisti dei film di Nolan <br>presentano sempre un rapporto
-      complesso <br>con <B>realtà</B> e memoria, e il regista si diverte a
+      complesso <br>con <font color="d24f2c"><b>realtà</b></font> e <font color="d24f2c"><b>memoria</b></font>, e il regista si diverte a
       raccontarne <br>le gesta giocando con il tempo, o per meglio dire,<br>
       utilizzando una struttura temporale non lineare.
     </p>
@@ -154,10 +154,10 @@ Partiamo dal montaggio di Nolan
 
 <a name="grafico"></a>
 <p></p><p></p><p></p><p></p><p></p>
-<img id="schema" src="schema.png" />
+<img id="schema" src="schema.jpg" />
 
   <br /><br /><br /><br />
-  
+  <br /><br /><br /><br /> <br /><br /><br /><br />
   <article>  
   <div class="stepcg" >
     <p>
